# STEPCodeDemo

ReadTest/: .gitignore  CMakeLists.txt  cylindertestWithComment.pp  cylindertest_logging.txt  main.cpp
ReadTest/include/: Makefile  cmake_install.cmake  sc_cf.h
RegistryTest/: CMakeLists.txt  main.cpp
Windows/PCLDataViewer/: .gitignore  CMakeLists.txt  PCLDataViewer.cpp  PCLDataViewer.h
Windows/stepcode/: .gitignore
Windows/stepcode/include/: sc_version_string.h
Windows/stepcode/usr/StepConstructor/: .gitignore  CMakeLists.txt
Windows/stepcode/usr/StepConstructor/source/: main.cpp  main.h  strconv.h
Windows/stepcode/usr/StepConstructor/source/Strategy/: ConcreteCurveEdgeGeometry.h  GraphDefinitionForBoost.h  MeshModel.cpp  MeshModel.h  StrategySTEP.cpp  StrategySTEP.h
Windows/stepcode/usr/StepConstructor/source/Strategy/Circular/: CenterZPlotting.cpp  CenterZPlotting.h  WidenZPlotting.cpp  WidenZPlotting.h  ZSliceImaging.cpp  ZSliceImaging.h
Windows/stepcode/usr/StepConstructor/source/Strategy/Numeric/: Solver.h  Solver_Sarrus.cpp
Windows/stepcode/usr/ap203_cartesianplotter/: CMakeLists.txt  main.cpp  main.h
Windows/stepcode/usr/ap203_construct_vertex/: CMakeLists.txt  main.cpp  main.h
Windows/stepcode/usr/ap203_cylindrical_roiextract/: CMakeLists.txt  main.cpp
Windows/stepcode/usr/ap203_test/: CMakeLists.txt  main.cpp
Windows/stepcode/usr/ap203_test/buil/: CMakeCache.txt
Windows/stepcode/usr/ap203_test/buil/sc/: sc_version_string.cmake
Windows/stepcode/usr/ap203_test/buil/sc/include/: sc_cf.h  sc_cf.h.in
Windows/stepcode/usr/ap203_test/buil/sc/schema_scanner/: 10303-219-AIM-long.exp  15926-0002-lifecycle_integration.exp  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AP235_TC_engineering_properties_schema_20110222.exp  AP240_aim_lf.exp  CMakeCache.txt  IFC4.exp  SC_SUBPROJECT_SCHEMA_SCANNER.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ap203.exp  ap209_N8334_mim_lf.exp  ap210e2_v1_40_mim_lf.exp  ap210e3_n8232_mim_lf.exp  ap227.exp  ap238-aim-long.exp  cmake_install.cmake  initial_scanner_cache.cmake  pdm_schema_12.exp  schema_scanner.vcxproj  schema_scanner.vcxproj.filters
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_AP214e3/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_IFC4/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ISO15926/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap203/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap203e2/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap209/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap210e2/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap210e3/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap219/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap227/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap235/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap238/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap239/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap240/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ap242/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_ifc2x3/: CMakeLists.txt
Windows/stepcode/usr/ap203_test/buil/sc/schemas/sdai_pdm/: CMakeLists.txt
Windows/stepcode/usr/ap203min/: CMakeLists.txt  main.cpp  main.h
Windows/stepcode/usr/ap214_planarread/: CMakeLists.txt  main.cpp
Windows/stepcode/usr/ap214read/: CMakeLists.txt  main.cpp
Windows/stepcode/usr/ap214test/: .gitignore
Windows/stepcode/usr/boosttest/: CMakeLists.txt  main.cpp  main.h
Windows/stepcode/usr2/ap203_test/: ap203_test.sln
Windows/stepcode/usr2/ap203_test/ap203_test/: ap203_test.cpp  ap203_test.vcxproj  ap203_test.vcxproj.filters
cad/: BSP35B20-N-12.stp.csv  KANA_NK35B10D9_K.stp  KANA_NK35B10D9_K.stp.csv  jsonsetting.json
